Incorporated answer into original function instead of creating a new one

--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -187,35 +187,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d9bb1e",
+   "id": "6e767598",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2c\n",
-    "def edge_exchange_preserve_components(G, t, max):\n",
+    "def edge_exchange(G, t, max):\n",
     "    '''\n",
-    "    Modification of the edge exchange algorithm which preserves existing components\n",
-    "    by isolating each and performing algorithm individually before reconnecting\n",
+    "    Implements 'edge exchange' algorithm to generate a null model of a graph while preserving its initial \n",
+    "    degree distribution. Performs 't' successful edge exchanges on given graph 'G' to randomize it.\n",
     "\n",
     "    Args:\n",
     "        G (nx.Graph): an undirected graph\n",
-    "        t (int): number of exchanges to be performed\n",
+    "        t (int): number of exchanges to be performed.\n",
     "        max (int): maximum number of failed iterations before loop closes\n",
     "\n",
     "    Returns:\n",
-    "        nx.Graph: a new, randomized version of input graph G\n",
+    "        nx.Graph: a new, randomized version of input graph G.\n",
     "    '''\n",
-    "    components = [G.subgraph(c).copy() for c in nx.connected_components(G)]\n",
+    "    G_copy = G.copy()  # create a copy of the graph so as to avoid altering it in place\n",
     "\n",
-    "    randomized_components = []\n",
-    "    \n",
-    "    for i, c in enumerate(components):\n",
-    "        rc = edge_exchange(c, t, max)\n",
-    "        randomized_components.append(rc)\n",
+    "    s = 0  # initialize counter for successful swaps\n",
+    "    itercount = 0  # initialize counter for failed iterations\n",
     "\n",
-    "    G_null = nx.union_all(randomized_components)\n",
+    "    errmsg = \"Error: Insufficient number of allowable exchanges\"\n",
     "\n",
-    "    return G_null"
+    "    if nx.is_connected(G):\n",
+    "\n",
+    "        while s < t and itercount < max:\n",
+    "            node_a, node_b = get_random_edge(G_copy)\n",
+    "            # define nodes to be referenced\n",
+    "            node_c, node_d = get_random_edge(G_copy)\n",
+    "            if node_a == node_c or node_a == node_d or node_b == node_c or node_b == node_d:\n",
+    "                itercount += 1  # add 1 to failure counter\n",
+    "                continue  # skip if edges not independent\n",
+    "            if G_copy.has_edge(node_a, node_d) or G_copy.has_edge(node_b, node_c):\n",
+    "                itercount += 1\n",
+    "                continue  # skip if edges to be created already exist\n",
+    "            G_copy.remove_edge(node_a, node_b)\n",
+    "            G_copy.remove_edge(node_c, node_d)\n",
+    "            G_copy.add_edge(node_a, node_d)\n",
+    "            G_copy.add_edge(node_b, node_c)  # remove and replace edges\n",
+    "\n",
+    "            s += 1  # add 1 to success counter\n",
+    "    else:\n",
+    "        components = [G.subgraph(c).copy() for c in nx.connected_components(G)]\n",
+    "\n",
+    "        randomized_components = []\n",
+    "        \n",
+    "        for i, c in enumerate(components):\n",
+    "            rc = edge_exchange(c, t, max)\n",
+    "            if rc is not None:\n",
+    "                randomized_components.append(rc)\n",
+    "            else:\n",
+    "                print (errmsg)\n",
+    "                return None\n",
+    "\n",
+    "        G_copy = nx.union_all(randomized_components)\n",
+    "\n",
+    "    if itercount == max:  # print error message if max failures reached\n",
+    "        print(errmsg)\n",
+    "        return None # differentiate between outputs if loop fails\n",
+    "\n",
+    "    return G_copy"
    ]
   },
   {
@@ -225,7 +259,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2d\n"
+    "# 2d\n",
+    "def edge_exchange(G, t, max):\n",
+    "    '''\n",
+    "    Implements 'edge exchange' algorithm to generate a null model of a graph while preserving its initial \n",
+    "    degree distribution. Performs 't' successful edge exchanges on given graph 'G' to randomize it.\n",
+    "\n",
+    "    Args:\n",
+    "        G (nx.Graph): an undirected graph\n",
+    "        t (int): number of exchanges to be performed.\n",
+    "        max (int): maximum number of failed iterations before loop closes\n",
+    "\n",
+    "    Returns:\n",
+    "        nx.Graph: a new, randomized version of input graph G.\n",
+    "    '''\n",
+    "    # create a copy of the graph so as to avoid altering it in place\n",
+    "    G_copy = G.copy()\n",
+    "\n",
+    "    # initialize counter for successful swaps\n",
+    "    s = 0\n",
+    "    # initialize counter for failed iterations\n",
+    "    itercount = 0\n",
+    "\n",
+    "    # assign error message to variable\n",
+    "    errmsg = \"Error: Insufficient number of allowable exchanges\"\n",
+    "\n",
+    "    # check if graph is connected\n",
+    "    if nx.is_connected(G):\n",
+    "\n",
+    "        while s < t and itercount < max:\n",
+    "            node_a, node_b = get_random_edge(G_copy)\n",
+    "            # define nodes to be referenced\n",
+    "            node_c, node_d = get_random_edge(G_copy)\n",
+    "            if node_a == node_c or node_a == node_d or node_b == node_c or node_b == node_d:\n",
+    "                itercount += 1  # add 1 to failure counter\n",
+    "                continue  # skip if edges not independent\n",
+    "            if G_copy.has_edge(node_a, node_d) or G_copy.has_edge(node_b, node_c):\n",
+    "                itercount += 1\n",
+    "                continue  # skip if edges to be created already exist\n",
+    "            G_copy.remove_edge(node_a, node_b)\n",
+    "            G_copy.remove_edge(node_c, node_d)\n",
+    "            G_copy.add_edge(node_a, node_d)\n",
+    "            G_copy.add_edge(node_b, node_c)  # remove and replace edges\n",
+    "\n",
+    "            s += 1  # add 1 to success counter\n",
+    "    else:\n",
+    "        # divide graph into subgraphs and assign them to a list\n",
+    "        components = [G.subgraph(c).copy() for c in nx.connected_components(G)]\n",
+    "        # initialize list for randomized components\n",
+    "        randomized_components = []\n",
+    "        # perform edge exchange on each element in list of initial components\n",
+    "        for c in components:\n",
+    "            rc = edge_exchange(c, t, max)\n",
+    "            if rc is not None: # check that max was not reached and append subgraph to list if so\n",
+    "                randomized_components.append(rc)\n",
+    "            else: # display error message if max is reached\n",
+    "                print(errmsg)\n",
+    "                return None\n",
+    "\n",
+    "        G_copy = nx.union_all(randomized_components) # recombine subgraphs\n",
+    "\n",
+    "    if itercount == max:  # print error message if max failures reached\n",
+    "        print(errmsg)\n",
+    "        return None  # differentiate between outputs if loop fails\n",
+    "\n",
+    "    return G_copy"
    ]
   },
   {
