Fixed some things

--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "# translate provided pseudocode function\n",
+    "# translating provided pseudocode function\n",
     "def edge_exchange(G, t):\n",
     "        '''\n",
     "        Implements 'edge exchange' algorithm to generate a null model of a graph while preserving its initial \n",
@@ -359,7 +359,6 @@
    "outputs": [],
    "source": [
     "# test by creating new random graph and endowing all nodes with binary attribute\n",
-    "#G_binary = nx.erdos_renyi_graph(100, 0.4)\n",
     "G_binary = nx.karate_club_graph()\n",
     "\n",
     "# store node dict in variable\n",
@@ -386,36 +385,35 @@
     "\n",
     "    ax[0].set_title(\"Original Network\")\n",
     "\n",
-    "    pos = nx.spring_layout(G_binary, seed=42)\n",
-    "    nx.draw(G_binary, pos, ax=ax[0], with_labels=True, node_color=color_map)\n",
+    "    nx.draw(G_binary, ax=ax[0], with_labels=True, node_color=color_map)\n",
     "\n",
     "    ax[1].set_title(\"Randomized Network\")\n",
     "\n",
-    "    nx.draw(G_null, pos, ax=ax[1], with_labels=True, node_color=color_map)\n",
+    "    nx.draw(G_null,  ax=ax[1], with_labels=True, node_color=color_map)\n",
     "\n",
     "    plt.show()\n",
     "\n",
     "def count_attribute_edges(graph):\n",
     "    \"\"\"Counts the number of edge types based on the 'group' node attribute.\"\"\"\n",
-    "    # Initialize a dictionary to hold the counts\n",
+    "    # init dict to hold counts\n",
     "    counts = {'Blue-Blue': 0, 'Red-Red': 0, 'Blue-Red': 0}\n",
     "    \n",
-    "    # Loop through every edge in the graph\n",
+    "    # loop through edges\n",
     "    for u, v in graph.edges():\n",
     "        group_u = graph.nodes[u]['group']\n",
     "        group_v = graph.nodes[v]['group']\n",
     "        \n",
-    "        # Increment the correct counter\n",
+    "        # increment counters\n",
     "        if group_u == 'Blue' and group_v == 'Blue':\n",
     "            counts['Blue-Blue'] += 1\n",
     "        elif group_u == 'Red' and group_v == 'Red':\n",
     "            counts['Red-Red'] += 1\n",
-    "        else:  # This covers both ('Blue', 'Red') and ('Red', 'Blue')\n",
+    "        else:  # covers both red-blue and blue-red\n",
     "            counts['Blue-Red'] += 1\n",
     "            \n",
     "    return counts\n",
     "\n",
-    "# --- Run the quantitative check ---\n",
+    "# run check\n",
     "original_counts = count_attribute_edges(G_binary)\n",
     "null_counts = count_attribute_edges(G_null)\n",
     "\n",
@@ -423,11 +421,11 @@
     "print(f\"Original Graph: {original_counts}\")\n",
     "print(f\"Null Model:     {null_counts}\")\n",
     "\n",
-    "# Compare the two dictionaries of counts\n",
+    "# compare the counts and return result\n",
     "if original_counts == null_counts:\n",
-    "    print(\"\\n✅ Success! The edge type counts are identical. The function worked correctly.\")\n",
+    "    print(\"\\nSuccess. The edge type counts are identical.\")\n",
     "else:\n",
-    "    print(\"\\n❌ Failure! The edge type counts are different. There is a bug in the function.\")"
+    "    print(\"\\nFailure. The edge type counts are different.\")"
    ]
   },
   {
