--- a/assignment-1.ipynb
+++ b/assignment-1.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# generate sample graph\n",
-    "G = nx.karate_club_graph()"
+    "#G = nx.karate_club_graph()"
    ]
   },
   {
