1c compute time problem

--- a/assignment02.ipynb
+++ b/assignment02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "494d8f6b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6b317e49",
    "metadata": {},
    "outputs": [],
@@ -28,8 +28,8 @@
     "    ds_copy = list(degseq)\n",
     "\n",
     "    # create nodes to populate G with\n",
-    "    N = len(degseq)\n",
-    "    G.add_nodes_from(range)\n",
+    "    n = len(degseq)\n",
+    "    G.add_nodes_from(range(n))\n",
     "\n",
     "    node_ids = list(G.nodes())\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a14cfbf1",
    "metadata": {},
    "outputs": [],
@@ -72,10 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "16da3879",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# collecting samples\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1000\u001b[39m):\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# using bui\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m     G \u001b[38;5;241m=\u001b[39m config_model(degrees)\n\u001b[0;32m     12\u001b[0m     config_graphs\u001b[38;5;241m.\u001b[39mappend(G)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1000\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[13], line 14\u001b[0m, in \u001b[0;36mconfig_model\u001b[1;34m(degseq)\u001b[0m\n\u001b[0;32m     10\u001b[0m G\u001b[38;5;241m.\u001b[39madd_nodes_from(\u001b[38;5;28mrange\u001b[39m(n))\n\u001b[0;32m     12\u001b[0m node_ids \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(G\u001b[38;5;241m.\u001b[39mnodes())\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28msum\u001b[39m(ds_copy) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;66;03m# until every stub has been matched\u001b[39;00m\n\u001b[0;32m     15\u001b[0m     stubs \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msample(node_ids, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     16\u001b[0m     i, j \u001b[38;5;241m=\u001b[39m stubs\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# 1c model diff (setup)\n",
     "\n",
@@ -87,11 +100,11 @@
     "# collecting samples\n",
     "for i in range(1000):\n",
     "    # using bui\n",
-    "    G = nx.configuration_model(degrees)\n",
+    "    G = config_model(degrees)\n",
     "    config_graphs.append(G)\n",
     "\n",
     "for i in range(1000):\n",
-    "    G = nx.expected_degree_graph(degrees, selfloops=False)\n",
+    "    G = chung_lu(degrees)\n",
     "    cl_graphs.append(G)\n",
     "\n",
     "def avg_adj_matrix(sample): # function to calculate avg adjacency matrix\n",
@@ -105,6 +118,22 @@
     "config_avg_adj = avg_adj_matrix(config_graphs)\n",
     "cl_avg_adj = avg_adj_matrix(cl_graphs)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2054e977",
+   "metadata": {},
+   "source": [
+    "differences:\n",
+    "1. chung lu does not preserve exact deg dist (how close is approximate?)\n",
+    "2. edge probs are independent in chung lu\n",
+    "3. no multi edges/self loop in chung lu\n",
+    "4. default considers all possible incarnations of a network that satisfy its constraints as equally probable\n",
+    "\n",
+    "metrics:\n",
+    "deg dist should be about same\n",
+    "cc diff\n"
    ]
   },
   {
@@ -137,22 +166,6 @@
     "ax[1].set_title('chung lu')\n",
     "\n",
     "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2054e977",
-   "metadata": {},
-   "source": [
-    "differences:\n",
-    "1. chung lu does not preserve exact deg dist (how close is approximate?)\n",
-    "2. edge probs are independent in chung lu\n",
-    "3. no multi edges/self loop in chung lu\n",
-    "4. default considers all possible incarnations of a network that satisfy its constraints as equally probable\n",
-    "\n",
-    "metrics:\n",
-    "deg dist should be about same\n",
-    "cc diff\n"
    ]
   }
  ],
